# gr2-image

./: .gitignore  Cargo.toml  README.md  colormap.pal
src/: anneal.rs  kmeans.rs  main.rs  tsp.rs
