[package]
name = "gr2-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
geo = "0.27.0"
geo-clipper = "0.8.0"
glob = "0.3.1"
image = "0.24.2"
kmeans_colors = { version = "0.6", features = ["palette_color"], default-features=false }
palette = "0.7.4"
rand = "0.8.5"
rayon = "1.8.1"
silv = { git = "https://github.com/SuperWinner50/silv-test.git" }
lkh-rs = { path = "../lkh-rs" }
