[package]
name = "gr2-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
geo = "0.27"
geo-clipper = "0.8"
glob = "0.3"
image = "0.24"
kmeans_colors = { version = "0.6", features = ["palette_color"], default-features=false }
palette = "0.7.4"
rand = "0.8"
rayon = "1.8"
silv = { git = "https://github.com/SuperWinner50/silv-test.git" }
lkh-rs = { git = "https://github.com/SuperWinner50/lkh-rs.git" }
